# sitedog-cli

./: .gitignore  Makefile  README.md  app.json  demo.html.erb  go.mod  go.sum  install.sh  main.go  sitedog.rb  sitedog.yml  test_requirements.txt  uninstall.sh
.cursor/rules/: project-context.mdc
.github/workflows/: release.yml
detectors/: ai_services.go  android.go  azurepipelines.go  bitbucket.go  cargo.go  chrome_extension.go  ci.go  circleci.go  composer.go  container_registry.go  dart.go  detector.go  dotnet.go  firebase.go  flyio.go  gemfile.go  git.go  gomod.go  heroku.go  i18n.go  image_services.go  ios.go  java.go  jenkins.go  maps_services.go  netlify.go  nx.go  packagejson.go  push_notifications.go  railway.go  registry.go  render.go  requirements.go  search_services.go  shopify.go  travis.go  utils.go  vercel.go  vscode_extension.go  wordpress.go
scripts/: build.sh  install.sh  uninstall.sh
tests/: run_tests.go  test_ai_services.go
tests/ai_services/: env_example  package.json  requirements.txt
tests/api_services/: package.json
tests/azurepipelines/: azure-pipelines.yml
tests/bitbucket/: bitbucket-pipelines.yml
tests/cargo/: Cargo.toml
tests/chrome_extension/: manifest.json
tests/composer/: composer.json
tests/container_registry/: .gitlab-ci.yml  Dockerfile  Makefile  docker-compose.yml  package.json
tests/dart/: pubspec.yaml
tests/dotnet/: MyApp.csproj  packages.config  project.json
tests/gemfile/: Gemfile
tests/gomod/: go.mod
tests/hosting/: app.json  fly.toml  railway.json  render.yaml  vercel.json
tests/ios/: Podfile
(+45 files in other folders)
